# TelegramBot-Base

./: .gitignore  README.md  env.example  pyproject.toml
app/: main.py  pyproject.toml
app/bot/handlers/: common.py
app/bot/keyboards/: builders.py
app/bot/middlewares/: db.py  throttling.py  translator.py  user.py
app/core/: config.py  logger_setup.py
app/i18n/: translator.py
app/i18n/locales/en/: messages.ftl
app/i18n/locales/ru/: messages.ftl
app/migrations/: env.py
app/models/: __init__.py  base.py  chat.py  user.py
app/repositories/: base.py  chat.py  user.py
app/schemas/: base.py  chat.py  user.py
app/services/: chat.py  user.py
app/storage/: db.py
