[tool.poetry]
package-mode = false
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
pydantic-settings = "^2.8.0"
alembic = "^1.14.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }
aiosqlite = "^0.21.0"
orjson = "^3.10.15"
cachetools = "^5.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
